--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <h1>TASK 04 - JAVASCRIPT</h1>
         <section class="section-1">
             <h2>EX 01</h2>
+            <span id="ordered-list" style="display: none;"></span>
+            <button id="ordering-button" onclick="orderedList()">Exibir lista em ordem crescente</button>
         </section>
 
         <section class="section-2">
