--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
         <section class="section-3">
             <h2>EX 03</h2>
+            <span id="alter-list"> Lista original: <br> [1.5, 6, 7.8, 19, 45, 89, 50.5, 25]<br></span>
+            <button id="btn-section-3" onclick="alterNumbersOfList()">Exibir números pares e seus índices</button>
         </section>
 
         <section class="section-4">
