refactor: exercise 1 to 3

--- a/index.html
+++ b/index.html
@@ -18,20 +18,21 @@
         <h1>TASK 04 - JAVASCRIPT</h1>
         <section class="section-1">
             <h2>EX 01</h2>
-            <span id="ordered-list" style="display: none;"></span>
-            <button onclick="printOrderedList()">Exibir lista em ordem crescente</button>
+            <span id="ordered-list">Lista original: <br> [12, 14, 94, 34, 30, 35, 57, 24, 19, 10] <br></span>
+            <button id="btn-section-1" onclick="printOrderedList()">Ordenar lista</button>
         </section>
 
         <section class="section-2">
             <h2>EX 02</h2>
+            <h3>Quais são os números pares de 1 a 30 e seus respectivos índices em uma lista?</h3>
             <span id="even-list" style="display: none;"></span>
-            <button id="btn-section-2" onclick="printEvenAndIndex()">Exibir números pares e seus índices</button>
+            <button id="btn-section-2" onclick="printEvenAndIndex()">Exibir listagem</button>
         </section>
 
         <section class="section-3">
             <h2>EX 03</h2>
             <span id="alter-list"> Lista original: <br> [1.5, 6, 7.8, 19, 45, 89, 50.5, 25]<br></span>
-            <button id="btn-section-3" onclick="alterNumbersOfList()">Exibir números pares e seus índices</button>
+            <button id="btn-section-3" onclick="alterNumbersOfList()">Alterar lista</button>
         </section>
 
         <section class="section-4">
