--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 
         <section class="section-4">
             <h2>EX 04</h2>
+            <span id="aoe-summary" style="display: none;"></span>
+            <button id="btn-section-4" onclick="summarizeAOE()">Ver resumo do inventário</button>
         </section>
 
         <section class="section-5">
