--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 
         <section class="section-5">
             <h2>EX 05</h2>
+            <h3>Cardápio de Queijo:</h3>
+            <span id="cheese-menu" style="display: none;"></span>
+            <button id="btn-section-5" onclick="showCheeseMenu()">Ver cardápio</button>
         </section>
 
         <section class="section-6">
