--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 
         <section class="section-6">
             <h2>EX 06</h2>
+            <h3>Veja todos os livros da biblioteca e filtre pela categoria de Terror!</h3>
+            <span id="books-catalog" style="display: none;"></span>
+            <button id="btn-section-6" onclick="booksCatalog()">Ver livros</button>
         </section>
 
         <section class="section-7">
