--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 
         <section class="section-7">
             <h2>EX 07</h2>
+            <span id="ranking" style="display: none;"></span>
+            <button id="btn-section-7" onclick="ranking()">Ver ranking</button>
         </section>
 
         <section class="section-8">
