--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
 
         <section class="section-8">
             <h2>EX 08</h2>
+            <h3>Conjuntos:</h3>
+            <span id="numerical-sets">
+                A = [2, 4, 6, 7, 8, 22, 45, 34, 89, 75, 62, 54] <br> B = [22, 23, 57, 45, 77, 62, 56, 54, 97, 88, 33, 5]
+            </span>
+            <button id="btn-section-8" onclick="handleNumericalSets()">Ver dados</button>
         </section>
 
         <section class="section-9">
