--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@
 
         <section class="section-9">
             <h2>EX 09</h2>
+            <h3>Pizzaria Gula - Relatório diário</h3>
+            <span id="pizzas-report"></span>
+            <button id="btn-section-9" onclick="pizzasReport()">Ver relatório</button>
         </section>
     </main>
 
