--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>TASK 04 - JAVASCRIPT</h1>
         <section class="section-1">
             <h2>EX 01</h2>
-            <span id="ordered-list">Lista original: <br> [12, 14, 94, 34, 30, 35, 57, 24, 19, 10] <br></span>
+            <span id="ordered-list"><strong>Lista original:</strong> <br> [12, 14, 94, 34, 30, 35, 57, 24, 19, 10] <br></span>
             <button id="btn-section-1" onclick="printOrderedList()">Ordenar lista</button>
         </section>
 
@@ -31,12 +31,13 @@
 
         <section class="section-3">
             <h2>EX 03</h2>
-            <span id="alter-list"> Lista original: <br> [1.5, 6, 7.8, 19, 45, 89, 50.5, 25]<br></span>
+            <span id="alter-list"> <strong>Lista original:</strong> <br> [1.5, 6, 7.8, 19, 45, 89, 50.5, 25]<br></span>
             <button id="btn-section-3" onclick="alterNumbersOfList()">Alterar lista</button>
         </section>
 
         <section class="section-4">
             <h2>EX 04</h2>
+            <h3>Resumo de inventário - Age Of Empires:</h3>
             <span id="aoe-summary" style="display: none;"></span>
             <button id="btn-section-4" onclick="summarizeAOE()">Ver resumo do inventário</button>
         </section>
@@ -57,6 +58,7 @@
 
         <section class="section-7">
             <h2>EX 07</h2>
+            <h3>Configuração do ranking:</h3>
             <span id="ranking" style="display: none;"></span>
             <button id="btn-section-7" onclick="ranking()">Ver ranking</button>
         </section>
